--- a/src/components/general/Footer.astro
+++ b/src/components/general/Footer.astro
@@ -102,7 +102,7 @@ import { info } from "@data";
     </a>
     <a
       aria-label="Social Media"
-      href={info.socialMedia.facebook}
+      href={info.socialMedia.instagram}
       target="_blank"
       class="footer-icons"
     >
@@ -116,10 +116,13 @@ import { info } from "@data";
         stroke-width="2"
         stroke-linecap="round"
         stroke-linejoin="round"
-        class="feather feather-facebook"
-        ><path
-          d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"
+        class="feather feather-instagram"
+      >
+        <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+        <path
+          d="M16 11.37a4 4 0 0 1-7.9 1.31 4 4 0 0 1 5.5-5.51 4 4 0 0 1 2.4 4.2z"
         ></path>
+        <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
       </svg>
     </a>
   </div>
